Fix background scrolling due to overflow

--- a/less/index.less
+++ b/less/index.less
@@ -34,7 +34,7 @@ body {
 }
 
 .background-container {
-    overflow-x: hidden;
+    overflow: hidden;
     position: relative;
     z-index: 0;
     width: 100%;
